# Rust-test

./: .gitignore  Cargo.toml  Makefile  README.md
coordinator/: .env.example  Cargo.toml  README.md
coordinator/src/: handlers.rs  main.rs  models.rs
database-supervisor/: Cargo.toml  README.md
database-supervisor/src/: ingest.rs  lib.rs  main.rs  telemetry_sink.rs  threshold.rs
event-router/: Cargo.toml  README.md
event-router/src/: codec.rs  ingest_id.rs  lib.rs  main.rs
influxdb-service/: .env.example  Cargo.toml  README.md
influxdb-service/src/: db.rs  main.rs  secrets.rs
postgres-service/: .env.example  Cargo.toml  README.md
postgres-service/db/migrations/: 001_plant_health_schema.sql
postgres-service/src/: db.rs  main.rs  secrets.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
protos/: influxdb_service.proto  postgres_service.proto  supervisor_service.proto
