[workspace]
members = [
    "proto",
    "coordinator",
    "postgres-service",
    "influxdb-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC / protobuf
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"

# HTTP
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "json", "chrono"] }
influxdb2 = { version = "0.5", features = [] }
influxdb2-structmap = "0.2"

# Errors / utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for Bitwarden)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Config / env
config = "0.14"
dotenvy = "0.15"
