[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "coordinator"
path = "src/main.rs"

[dependencies]
proto = { path = "../proto" }

tokio.workspace = true
tonic.workspace = true
prost.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
uuid.workspace = true
