[package]
name = "database-supervisor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "database-supervisor"
path = "src/main.rs"

[lib]
name = "database_supervisor"
path = "src/lib.rs"

[dependencies]
proto = { path = "../proto" }

tokio.workspace = true
tonic.workspace = true
prost.workspace = true

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

async-trait.workspace = true
lapin.workspace = true
sha2.workspace = true
hex.workspace = true

influxdb2.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
