[package]
name = "event-router"
version.workspace = true
edition.workspace = true

[[bin]]
name = "event-router"
path = "src/main.rs"

[lib]
name = "event_router"
path = "src/lib.rs"

[dependencies]
proto = { path = "../proto" }

tokio.workspace = true
tonic.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

sha2.workspace = true
hex.workspace = true
crc32fast.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
