[package]
name = "influxdb-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "influxdb-service"
path = "src/main.rs"

[dependencies]
proto = { path = "../proto" }

tokio.workspace = true
tonic.workspace = true
prost.workspace = true

influxdb2.workspace = true
influxdb2-structmap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
chrono.workspace = true
