[package]
name = "postgres-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "postgres-service"
path = "src/main.rs"

[dependencies]
proto = { path = "../proto" }

tokio.workspace = true
tonic.workspace = true
prost.workspace = true

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
